--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,11 @@ version: 1
 runtime: php
 api_version: 1
 
+handlers:
+- url: /
+  static_files: static/index.html
+  upload: static/index.html
+
 - url: /(.*\.(html|gif|png|jpg|ico|bmp|css|otf|eot|svg|ttf|woff))
   static_files: static/\1
   upload: static/(.*\.(html|gif|png|jpg|ico|bmp|css|otf|eot|svg|ttf|woff))
