--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,9 @@ handlers:
   static_files: static/index.html
   upload: static/index.html
 
-- url: /(.*\.(html|gif|png|jpg|ico|bmp|css|otf|eot|svg|ttf|woff))
+- url: /(.*\.(html|gif|png|jpg|ico|bmp|css|js|otf|eot|svg|ttf|woff))
   static_files: static/\1
-  upload: static/(.*\.(html|gif|png|jpg|ico|bmp|css|otf|eot|svg|ttf|woff))
+  upload: static/(.*\.(html|gif|png|jpg|ico|bmp|css|js|otf|eot|svg|ttf|woff))
 
 - url: /.*
   static_files: static/404.html
