--- a/app.yaml
+++ b/app.yaml
@@ -96,8 +96,8 @@ handlers:
   expiration: "10m"
 
 - url: /
-  static_files: /index.html
-  upload: /index.html
+  static_files: index.html
+  upload: index.html
   expiration: "10m"
 
 # 404 error
